[package]
name = "cloudflare_ddns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.204", features = ["serde_derive"] }
serde_json = "1.0.120"
toml = "0.8.14"
ureq = "2.10.0"
